# rust-sokoban-level-generator

./: .gitignore  Cargo.toml  README.md
dataset_generation/: README.md  random_transitions.py  test_image.py  text_to_pkl.py  transitions2imagetensor.py
src/: board.rs  cell.rs  game.rs  level.rs  lib.rs  room.rs
